[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espion_tools"
version = "0.0.6"
authors = [
  { name="Tom Wright", email="tom@maladmin.com" },
]
description = "Utility functions for reading and manipulating Espion (www.diagnosysllc.com) export files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tomwright01/espion_tools"
"Bug Tracker" = "https://github.com/tomwright01/espion_tools/issues"